<resources>
    <string name="app_name">Enigma_Home</string>
    <string name="p1_txt">Apple MacBook Air Core i5 5th Gen - (8 GB/128 GB SSD/Mac OS Sierra)</string>
    <string name="p2_txt">Asus FX505G i7/8G/1TB/4GBV/W10 Laptop(2Y</string>
    <string name="p3_txt">HP 15-da0004TU i3/4G/1TB/Win10 Laptop</string>
    <string name="p4_txt">Lenovo IP330S- i5/8G/1T/2G/W10 Laptop</string>
    <string name="p5_txt">Lenovo Ideapad IP330 Celeron 4GB Ram, 1TB HDD, WIN10</string>
    <string name="p6_txt">HP Notebook AMD Ryzen 3, 4GB Ram, 1TB HDD, 15.6, WIN 10</string>
    <string name="p7_txt">ACER Notebook Core I3, 4GB Ram, 1TB HDD, WIN 10</string>
    <string name="p8_txt">ACER Laptop Intel Core I5/8GB RAM/1TB HDD/GTX10504GB</string>
    <string name="p9_txt">HP Laptop Omen 15-DC0121 I7-8750/16GB/256GB/ WIN10</string>
    <string name="p10_txt">MSI Notebook Intel Core i7/16GB/256SSD/WIN 10</string>
    <string name="p11_txt">Apple - MacBook Pro - 13\" Display with Touch Bar</string>
    <string name="p1m">13.3 Inch, 256 GB</string>
    <string name="p2m">14.3 Inch, 500 GB</string>
    <string name="p3m">15 Inch, 1TB</string>
    <string name="p4m">16 Inch, 256 GB</string>
    <string name="p5m">13.3 Inch, 2TB</string>
    <string name="p6m">15 Inch, 256 GB</string>
    <string name="p7m">17 Inch, 256 GB</string>
    <string name="p8m">13.3 Inch, 1 TB</string>
    <string name="p10">13.3 Inch, 256 GB</string>
    <string name="p11">16 Inch, 256 GB</string>
    <string name="p1r">5.0</string>
    <string name="p2r">6.3</string>
    <string name="p3r">7.0</string>
    <string name="p4r">3.0</string>
    <string name="p5r">8.8</string>
    <string name="p6r">6.0</string>
    <string name="p7r">6.6</string>
    <string name="p8r">4.4</string>
    <string name="p9r">9.0</string>
    <string name="p10r">5.4</string>
    <string name="p11r">7.7</string>
    <string name="p1p">Rs 135000</string>
    <string name="p2p">Rs 155000</string>
    <string name="p3p">Rs 145000</string>
    <string name="p4p">Rs 235000</string>
    <string name="p5p">Rs 175000</string>
    <string name="p6p">Rs 215000</string>
    <string name="p7p">Rs 185000</string>
    <string name="p8p">Rs 165500</string>
    <string name="p9p">Rs 200000</string>
    <string name="p10p">Rs 115000</string>
    <string name="p11p">Rs 205000</string>
    <string name="p9m">12.3 Inch, 256 GB</string>
    <string name="addProductBtn">Add Product</string>
    <string name="updateProductBtn">Update Product</string>
    <string name="deleteProductBtn">Delete Product</string>
    <string name="Pname">Product Name :</string>
    <string name="pprice">Product Price :</string>
    <string name="pcapasity">Product capasity :</string>
    <string name="Loginbtn">Home Page</string>
    <string name="AdminLoginbtn">Admin Page</string>
</resources>
